# riscv-emulator

./: README.md
riscv-program/: CMakeLists.txt  build.sh  script.ld
riscv-program/src/: boot.c  boot.h  interrupt.s  syscalls.c  syscalls.h  test.c
src/: instruction_decoder.rs  instructions.rs  main.rs  memory.rs  register.rs  syscalls.rs  utils.rs  vm.rs
